# lific

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  server.json
.github/workflows/: ci.yml  release.yml
docs/: mcp-registry.md
integrations/opencode-lific-plans/: index.ts
migrations/: 011_default_project_lead.sql  015_module_icon.sql  018_audit_log.sql  019_plans.sql  020_plans_cascade.sql  021_plans_audit.sql  024_web_auto_login.sql  028_project_members_audit.sql  032_comment_mentions.sql
promo/src/: Ad.tsx  AdB.tsx  BoardLoop.tsx  PlanSync.tsx  Root.tsx  theme.ts  timing.ts
promo/src/components/: issue-list-ui.tsx  lific-ui.tsx  opencode-ui.tsx
promo/src/scenes/: AgentHook.tsx  AgentScene.tsx  Agitate.tsx  Cta.tsx  Hook.tsx  InitScene.tsx  PlansScene.tsx  ProblemFlash.tsx  TerminalScene.tsx  UIScene.tsx  WebUIScene.tsx
scripts/: check-docs.mjs
site/: .gitignore  README.md  next.config.ts  package.json  source.config.ts  wrangler.jsonc
site/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
site/app/compare/: page.tsx
site/app/components/: AutoplayVideo.tsx  CopyButton.tsx  Reveal.tsx  StarCount.tsx  VersionChip.tsx
site/app/docs/: layout.tsx
site/app/docs/[[...slug]]/: page.tsx
site/app/llms-full.txt/: route.ts
site/app/llms.txt/: route.ts
site/content/docs/: cli.mdx  connect.mdx  installation.mdx
site/content/docs/mcp/: index.mdx  tools.mdx
site/public/: robots.txt  sitemap.xml
src/: actor.rs  auth.rs  authz.rs  authz_coverage_tests.rs  backup.rs  config.rs  dump.rs  error.rs  export.rs  main.rs  oauth.rs  ratelimit.rs  realtime.rs
src/api/: activity.rs  auth.rs  comments.rs  insights.rs  issues.rs  members.rs  mod.rs  pages.rs  plans.rs  projects.rs  resources.rs
src/cli/: doctor.rs  exec.rs  http.rs  import.rs  mod.rs  service.rs
src/cli/connect/: clients.rs  mod.rs
src/db/: migrate.rs  mod.rs  models.rs
src/db/queries/: activity.rs  attachments.rs  comments.rs  insights.rs  issues.rs  members.rs  mod.rs  pages.rs  plans.rs  projects.rs  resources.rs  search.rs  settings.rs
src/import/: jira.rs  linear.rs  mod.rs
src/import/fixtures/: jira_adf.json  jira_issues.json  linear_issues.json
src/mcp/: mod.rs  schemas.rs  tools.rs
web/: bun.nix  index.html  vite.config.ts
web/public/: manifest.webmanifest
web/src/: App.svelte  app.css  vite-env.d.ts
web/src/lib/: ActivityTimeline.svelte  AuthShell.svelte  Breadcrumbs.svelte  CommandPalette.svelte  Comments.svelte  DeleteMenu.svelte  DocumentDetail.svelte  EditableMarkdown.svelte  ErrorState.svelte  IconPicker.svelte  InlineTitle.svelte  IssueHoverCard.svelte  IssuePickerModal.svelte  LabelEditor.svelte  LabelManager.svelte  Layout.svelte  Markdown.svelte  ModeToggle.svelte  PriorityIcon.svelte  ProjectForm.svelte  ProjectMembers.svelte  Select.svelte  ToolIcon.svelte  Tooltip.svelte  activityRate.ts  api.ts  autoRefresh.svelte.ts  clipboard.ts  markdownFormat.ts  palette.ts  projectRole.svelte.ts  references.ts  shortcuts.ts
web/src/lib/attachments/: DropOverlay.svelte  PendingUploads.svelte  uploads.svelte.ts
web/src/lib/home/: recents.ts
web/src/lib/insights/: ActorList.svelte  DistributionList.svelte  TrendChart.svelte  curve.ts
web/src/lib/issues/: BulkActionBar.svelte  IssueCard.svelte  IssueRow.svelte  PeekPanel.svelte  RightSidebar.svelte  Topbar.svelte  deferredDelete.svelte.ts  grouping.ts  peek.svelte.ts  persistence.ts  state.svelte.ts
web/src/lib/toast/: Toaster.svelte  toast.svelte.ts
web/src/routes/: Home.svelte  Insights.svelte  InstanceSettings.svelte  IssueDetail.svelte  IssueList.svelte  IssueNew.svelte  Login.svelte  ModuleDetail.svelte  ModuleList.svelte  PageDetail.svelte  PageList.svelte  PlanDetail.svelte  PlanList.svelte  ProjectActivity.svelte  ProjectSettings.svelte  Settings.svelte  Signup.svelte
